--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>CSS Snippet Cheat Sheet</title>
     <!-- <link rel="stylesheet" href="./assets/styles/reset.css"> -->
     <link rel="stylesheet" href="./assets/styles/style.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/favicon/apple-touch-icon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon/favicon-32x32.svg">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon/favicon-16x16.svg">
     <link rel="manifest" href="/site.webmanifest">
